trunk/Archive2/b4/f9e3247e409112/main.cpp
struct Foo {
    enum class Bar { one, two };
    
    Foo(Bar b) : bar(b) { }
    
};

int main()
{
    Foo x;
    return 0;
}